5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1752_3096.log
== TEST (2019-05-16 17:18:40) 
-- CODE:
x = int(input("digite o lugar colocad: "))
h = 0
d = 0

while x!=0:
	if x == 1:
		h = 20
	if x == 2:
		h = 15
	if x == 3:
		h = 10
	if x > 3 and x < 11:
		h = 4
	d = h+d
	x = int(input("digite outro lugar: "))
-- ERROR:
File "XXXX", line 17
    elif (partida.upper() == 'E'):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:19:00) 
-- CODE:
x = int(input("digite o lugar colocad: "))
h = 0
d = 0

while x!=0:
	if x == 1:
		h = 20
	if x == 2:
		h = 15
	if x == 3:
		h = 10
	if x > 3 and x < 11:
		h = 4
	d = h+d
	x = int(input("digite outro lugar: "))
print(d)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:19:28) 
-- CODE:
x = int(input("digite o lugar colocad: "))
h = 0
d = 0

while x!=0:
	if x == 1:
		h = 20
	if x == 2:
		h = 15
	if x == 3:
		h = 10
	if x > 3 and x < 11:
		h = 4
	d = h + h
	x = int(input("digite outro lugar: "))
print(d)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:46) 
-- CODE:
x = int(input("digite o lugar colocad: "))
h = 0
d = 0

while x!=0:
	if x == 1:
		h = 20 + h
	if x == 2:
		h = 15 + h
	if x == 3:
		h = 10 + h
	if x > 3 and x < 11:
		h = 4 + h
	d = h 
	x = int(input("digite outro lugar: "))
print(d)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:20:58) 
-- CODE:
x = int(input("digite o lugar colocad: "))
h = 0
d = 0

while x!=0:
	if x == 1:
		h = 20 + h
	if x == 2:
		h = 15 + h
	if x == 3:
		h = 10 + h
	if x > 3 and x < 11:
		h = 4 + h
	d = h 
	x = int(input("digite outro lugar: "))
print(d)
-- EXECUTION TIME:
0.171244
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
73
---- user output:
73
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
135
---- user output:
135
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 23:02:34) 
-- CODE:
x = int(input("digite o lugar colocad: "))
h = 0
d = 0

while x!=0:
	if x == 1:
		h = 20 + h
	if x == 2:
		h = 15 + h
	if x == 3:
		h = 10 + h
	if x > 3 and x < 11:
		h = 4 + h
	d = h 
	x = int(input("digite outro lugar: "))
print(d)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 23:03:11) 
-- CODE:
x = int(input("digite o lugar colocad: "))
h = 0
d = 0

while x!=0:
	if x == 1:
		h = 20 + h
	if x == 2:
		h = 15 + h
	if x == 3:
		h = 10 + h
	if x > 3 and x < 11:
		h = 4 + h
	d = h 
	x = int(input("digite outro lugar: "))
print(d)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 23:03:14) 
-- CODE:
x = int(input("digite o lugar colocad: "))
h = 0
d = 0

while x!=0:
	if x == 1:
		h = 20 + h
	if x == 2:
		h = 15 + h
	if x == 3:
		h = 10 + h
	if x > 3 and x < 11:
		h = 4 + h
	d = h 
	x = int(input("digite outro lugar: "))
print(d)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 23:03:29) 
-- CODE:
x = int(input("digite o lugar colocad: "))
h = 0
d = 0

while x!=0:
	if x == 1:
		h = 20 + h
	if x == 2:
		h = 15 + h
	if x == 3:
		h = 10 + h
	if x > 3 and x < 11:
		h = 4 + h
	d = h 
	x = int(input("digite outro lugar: "))
print(d)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 23:03:55) 
-- CODE:
x = int(input("digite o lugar colocad: "))
h = 0
d = 0

while x!=0:
	if x == 1:
		h = 20 + h
	if x == 2:
		h = 15 + h
	if x == 3:
		h = 10 + h
	if x > 3 and x < 11:
		h = 4 + h
	d = h 
	x = int(input("digite outro lugar: "))
print(d)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
